# encryptman

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs
