[package]
name = "encryptman"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "AES-256-GCM encryption for application settings with HKDF key derivation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/suradet-ps/encryptman"
keywords = ["encryption", "aes", "gcm", "settings", "secrets"]
categories = ["cryptography", "config"]
readme = "README.md"
documentation = "https://docs.rs/encryptman"
include = ["src/**", "README.md", "LICENSE*", "CHANGELOG.md"]

[lints.rust]
missing_docs = "deny"

[dependencies]
aes-gcm = "0.10"
hkdf = "0.13"
sha2 = "0.11"
base64 = "0.22"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
